[project]
name = "mazegen"
version = "1.0.0"
description = ""
authors = [
    {name = "elhamza, sasaidi"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mypy (>=1.20.0,<2.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]


[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = "."
explicit_package_bases = true
